# gradio-chatgpt-sample

./: Makefile  README.md  compose.yaml
api/: .gitignore  Dockerfile  app.py  pyproject.toml
gradio/: .gitignore  app.py  pyproject.toml
